# rusty-chip8

./: .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  package.json  snowpack.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: build-and-deploy.yaml
_snowpack/pkg/: import-map.json  rxjs.js
_snowpack/pkg/common/: mergeAll-088f0dba.js
_snowpack/pkg/rxjs/: operators.js
css/: styles.css
public/: index.html
public/css/: styles.css
src/: chip8.rs  display.rs  instruction.rs  main.rs  main.ts  op_codes.rs  program_counter.rs
src/assets/: list.json
src/chip8/: Cargo.toml
src/chip8/src/: display.rs  lib.rs
src/utils/: graphics.ts  keys.ts  transforms.ts
